# be-music-cabinet

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bms_scan.rs  lib.rs  main.rs
src/locales/: en.json  ja.json  ko.json  zh.json
