[package]
name = "be-music-stack"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "be_music_stack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = "thin"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10" }
walkdir = "2.5"
rand = "0.9"
crossbeam = "0.8"
anyhow = { version = "1" }
sysinfo = { version = ">=0.33,<1", features = ["system", "disk", "user"] }
